Canary/virtual-service-route-by-header.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
    - "*"
  gateways:
    - hello-gateway
  http:
    - match:
      - uri:
          prefix: /api
        headers:
          x-version:
            exact: "v1"
      route:
        - destination:
            host: hello-srv.hello.svc.cluster.local
            subset: v1
            port:
              number: 8080
    - match:
      - uri:
          prefix: /api
        headers:
          x-version:
            exact: "v2"
      route:
        - destination:
            host: hello-srv.hello.svc.cluster.local
            subset: v2
            port:
              number: 8080
